--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@ header {
   border-radius: 10px;
 }
 
+.shadow{
+  box-shadow: 10px 10px 8px #888888;
+}
+
 .logo {
   font-size: 24px;
   font-weight: bold;
@@ -99,6 +103,7 @@ nav ul li a:hover {
   justify-content: center;
   align-items: stretch;
   margin-top: 30px;
+  list-style: none;
 }
 
 .pricing-item {
@@ -112,6 +117,7 @@ nav ul li a:hover {
 }
 
 .pricing-item:before {
+  margin-left: 10px;
   content: "";
   width: 0;
   height: 0;
@@ -119,8 +125,8 @@ nav ul li a:hover {
   border-width: 0 30px 30px 0;
   border-color: transparent #f0f0f0 transparent transparent;
   position: absolute;
-  top: -1px;
-  left: -30px;
+  top: 0px;
+  left: -25px;
 }
 
 .pricing-header {
@@ -179,6 +185,25 @@ nav ul li a:hover {
 .form-group textarea:focus {
   outline: none;
   border-color: #333;
+}
+
+.userDataButton{
+  background-color: #38b6ff;
+  border-radius: 5px;
+}
+
+.userDataButton a{
+  text-decoration: none;
+  color: inherit;
+}
+
+.userDataButton a:hover{
+  color: inherit;
+}
+
+.submitButton{
+  background-color: #38b6ff;
+  border-radius: 5px;
 }
 
 footer{
