--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@ header {
   border-radius: 10px;
 }
 
+.testimonial img{
+  border-radius: 50%;
+}
+
 .shadow{
   box-shadow: 10px 10px 8px #888888;
 }
